# psup-stac-converter

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  converter-params.example.yml  converter-params.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ci.yml  publish-docs.yml
code/psup-catalog/: index.html
code/psup-scraper/: index.html
docs/: index.md  psup-raw-data.md  references.md  stac-model.md
docs/code/: psup-catalog.md  psup-scraper.md
notebooks/: catalog_reading.py  data_exploration.py  geojson_reading.py  omega_cube_viz.py  omega_cubes.py  projections.py
psup-raw-data/: index.html
references/: index.html
src/: scrapy.cfg
src/psup_scraper/: __init__.py  cli.py  items.py  middlewares.py  pipelines.py  settings.py
src/psup_scraper/spiders/: psup_files.py  wkt_spider.py
src/psup_stac_converter/: __init__.py  _main.py  cli.py  exceptions.py  extensions.py  informations.py  processing.py  settings.py
src/psup_stac_converter/informations/: data_providers.py  geojson_features.py  instruments.py  publications.py
src/psup_stac_converter/omega/: __init__.py  _base.py  c_channel_proj.py  data_cubes.py  mineral_maps.py
src/psup_stac_converter/processors/: __init__.py  base.py  costard_craters.py  crater_detection.py  crocus_ls.py  hydrated_mineral_sites.py  lcp_flahaut.py  lcp_vmwalls.py  scalloped_depression.py  selection.py
src/psup_stac_converter/stac_extra/: __init__.py  eo_v2.py  ssys_extension.py
src/psup_stac_converter/utils/: downloader.py  file_utils.py  formatting.py  io.py  models.py
stac-model/: index.html
test/: conftest.py  test_convert_arr_to_thumbnail.py  test_custom_extensions.py
test/cassettes/test_custom_extensions/: test_item_validate_schema.yaml  test_validate_eo.yaml
test/data-files/: eo-asset-example.json  eo-collection.json  eo-example.json  eo-landsat-example.json  eo-sentinel2-item.json  sample-bands-in-item-properties.json
test/data-files/examples/0.9.0/item-spec/examples/: landsat8-sample.json
test/data-files/examples/1.0/item-spec/examples/: sample-item.json
test/data-files/examples/1.1/asset-spec/examples/: sample-asset.json
test/data-files/item/: sample-item.json
