[project]
name = "psup-stac-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shadi Boomi", email = "shadi.boomi@universite-paris-saclay.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "beautifulsoup4>=4.13.5",
    "geopandas[all]>=1.1.1",
    "httpx>=0.28.1",
    "lxml>=6.0.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pystac>=1.14.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "scrapy>=2.13.3",
    "spectral>=0.24",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[project.scripts]
psup-stac-converter = "psup_stac_converter:main"
psup-stac = "psup_stac_converter.cli:app"
psup-scraper = "psup_scraper.cli:app"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    # "pytest>=8.4.2",
    "ruff>=0.13.0",
]
notebook = [
    "ipykernel>=6.30.1",
    "marimo[recommended]>=0.15.5",
]

[tool.uv.build-backend]
module-name = ["psup_stac_converter", "psup_scraper"]
